Retoque para fav ❤

--- a/templates/manga/index.html.twig
+++ b/templates/manga/index.html.twig
@@ -4,7 +4,7 @@
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('css/Cards.css') }}" />
-    <link rel="stylesheet" href="{{ asset('css/animeflv.css') }}" />
+    <link rel="stylesheet" href="{{ asset('css/Manga.css') }}" />
 {% endblock %}
 
 
