--- a/public/css/Login.css
+++ b/public/css/Login.css
@@ -50,7 +50,7 @@ body :-ms-input-placeholder {
 .wrapper {
   background: #50a3a2;
   background: -webkit-gradient(linear, left top, right bottom, from(black), to(red));
-  background: linear-gradient(to bottom, black 0%, red 100%);
+  background: linear-gradient(to bottom, black 10%, white 100%);
   position: absolute;
   left: 0;
   width: 100%;
@@ -115,13 +115,29 @@ form button {
   background-color: white;
   border: 0;
   padding: 10px 15px;
-  color: red;
+  color: black;
   border-radius: 3px;
   width: 250px;
   cursor: pointer;
   font-size: 18px;
   -webkit-transition-duration: 0.25s;
           transition-duration: 0.25s;
+}
+a.btn {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: 0;
+  background-color: white;
+  border: 0;
+  padding: 10px 90px;
+  color: black;
+  border-radius: 3px;
+  width: 250px;
+  cursor: pointer;
+  font-size: 18px;
+  -webkit-transition-duration: 0.25s;
+  transition-duration: 0.25s;
 }
 form button:hover {
   background-color: #f5f7f9;
