--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -30,7 +30,7 @@
                 <main class="Main">
                     <section class="WdgtCn">
                         <div class="Top">
-                            <div class="Title">Animes favoritos</div>
+                            <div class="Title">Mangas favoritos</div>
                         </div>
                         <ul class="ListAnimes AX Rows A06 C04 D03">
                             {% for fav in user.favoritos %}
